V2 majeure — 11 îles, bateau, caméra, UI CHK
Reconstruction majeure du jeu Android avec campagne 11 îles, progression, bateau contrôlable, caméra tactile, combat, carte, météo, sauvegarde, interface et logo CHK. Build validé par GitHub Actions.