@@ -6,13 +6,14 @@ import android.speech.tts.TextToSpeech;
 import android.view.View;
 import android.view.Window;
 import android.view.WindowManager;
+import android.widget.FrameLayout;
 
 import java.util.Locale;
 
-public final class MainActivity extends Activity implements PirateGameView.VoiceNarrator {
+public final class MainActivity extends Activity implements WorldGameView.VoiceNarrator {
     private TextToSpeech textToSpeech;
     private boolean voiceReady;
-    private PirateGameView gameView;
+    private WorldGameView gameView;
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
@@ -21,28 +22,32 @@ public final class MainActivity extends Activity implements PirateGameView.Voice
         getWindow().addFlags(WindowManager.LayoutParams.FLAG_FULLSCREEN
                 | WindowManager.LayoutParams.FLAG_KEEP_SCREEN_ON);
         hideSystemBars();
+        setContentView(R.layout.activity_main);
+
+        FrameLayout root = findViewById(R.id.game_root);
+        gameView = new WorldGameView(this, this);
+        root.addView(gameView, new FrameLayout.LayoutParams(
+                FrameLayout.LayoutParams.MATCH_PARENT,
+                FrameLayout.LayoutParams.MATCH_PARENT));
 
         textToSpeech = new TextToSpeech(this, status -> {
             if (status == TextToSpeech.SUCCESS) {
                 int result = textToSpeech.setLanguage(Locale.FRANCE);
                 voiceReady = result != TextToSpeech.LANG_MISSING_DATA
                         && result != TextToSpeech.LANG_NOT_SUPPORTED;
-                textToSpeech.setSpeechRate(0.92f);
-                textToSpeech.setPitch(0.96f);
+                textToSpeech.setSpeechRate(0.94f);
+                textToSpeech.setPitch(0.97f);
                 if (voiceReady && gameView != null) {
                     gameView.onVoiceReady();
                 }
             }
         });
-
-        gameView = new PirateGameView(this, this);
-        setContentView(gameView);
     }
 
     @Override
     public void speak(String text) {
-        if (voiceReady && text != null && !text.isBlank()) {
-            textToSpeech.speak(text, TextToSpeech.QUEUE_FLUSH, null, "chk-pirate-voice");
+        if (voiceReady && text != null && !text.trim().isEmpty()) {
+            textToSpeech.speak(text, TextToSpeech.QUEUE_FLUSH, null, "chk-pirate-v2");
         }
     }
 
@@ -50,16 +55,12 @@ public final class MainActivity extends Activity implements PirateGameView.Voice
     protected void onResume() {
         super.onResume();
         hideSystemBars();
-        if (gameView != null) {
-            gameView.resumeGameLoop();
-        }
+        if (gameView != null) gameView.resumeGameLoop();
     }
 
     @Override
     protected void onPause() {
-        if (gameView != null) {
-            gameView.pauseGameLoop();
-        }
+        if (gameView != null) gameView.pauseGameLoop();
         super.onPause();
     }
 
@@ -75,9 +76,7 @@ public final class MainActivity extends Activity implements PirateGameView.Voice
     @Override
     public void onWindowFocusChanged(boolean hasFocus) {
         super.onWindowFocusChanged(hasFocus);
-        if (hasFocus) {
-            hideSystemBars();
-        }
+        if (hasFocus) hideSystemBars();
     }
 
     private void hideSystemBars() {
